Adding additional solutions to other problems. Hopefully, we get to this

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
 /section2_starter - Rosman's Section
-/Additional Problems to Section 2 - Rosman's Section
+/section2_starter_additional_problems- Rosmans Section
